@@ -1,3 +1,10 @@
+2013-06-25  Nick Clifton  <nickc@redhat.com>
+
+	* config/tc-msp430.c (msp430_srcoperand): Do not allow the use of
+	the PC in indirect addressing on 430xv2 parts.
+	(msp430_operands): Add version test to hardware bug encoding
+	restrictions.
+
 2013-06-24  Roland McGrath  <mcgrathr@google.com>
 
 	* config/tc-arm.c (parse_reg_list): Use skip_past_char for '}',
